# mssql-module-construct

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_app.py
assets/: config.default.json
mssql_utils/: db.py  excel.py  query_builder.py
src/app/: __main__.py  app.py
src/core/: app.py  config.py  container.py  crypto.py  events.py  logger.py  migrations.py  module_api.py  registry.py  storage.py
src/modules/datasource/: __init__.py  connection_manager.py
src/modules/envcheck/: __init__.py  checks.py  widget.py
src/modules/schema/: __init__.py  cache.py
src/modules/security/: __init__.py  sql_guard.py
src/tests/: test_connection_manager.py  test_container.py  test_envcheck.py  test_module_api.py  test_registry.py  test_sql_guard.py  test_storage.py  test_ui_modules.py
src/ui/: dialog_connection.py  dialog_master_key.py  main_window.py  panel_schema.py
