[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mssql-module-construct"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "pyodbc",
    "pandas",
    "openpyxl",
    "pydantic",
    "cryptography"
]

[project.urls]
homepage = ""
